refactor code with single submit button and branching logic to handle four functions.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ form {
   padding-right: 150px;
   background-color: #c3f7c3;
   border: 5px solid black;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 input {
